@@ -158,9 +158,10 @@ getTaskTargets = function(task, subset, recode.target = "no") {
 #'   Default is FALSE.
 #' @param recode.target [\code{character(1)}]\cr
 #'   Should target classes be recoded? Only for binary classification.
-#'   Possible are \dQuote{no} (do nothing), \dQuote{01}, and \dQuote{-1+1}.
+#'   Possible are \dQuote{no} (do nothing), \dQuote{01}, \dQuote{-1+1} and \dQuote{drop.levels}.
 #'   In the two latter cases the target vector is converted into a numeric vector.
 #'   The positive class is coded as +1 and the negative class either as 0 or -1.
+#'   \dQuote{drop.levels} will remove empty factor levels in the target column.
 #'   Default is \dQuote{no}.
 #' @return Either a data.frame or a list with data.frame \code{data} and vector \code{target}.
 #' @family task
