@@ -2,7 +2,7 @@
 #'
 #' @description
 #' Normalize features by different methods. 
-#' Internally \code{\link{BBmisc::normalize}} is used for every feature column.
+#' Internally \code{\link[BBmisc]{normalize}} is used for every feature column.
 #' Non numerical features will be left untouched and passed to the result.
 #' For constant features most methods fail, special behaviour for this case is implemented.
 #'
@@ -13,6 +13,7 @@
 #'   \dQuote{scale}: Divide by standard deviation.\cr
 #'   \dQuote{standardize}: Center and scale.\cr
 #'   \dQuote{range}: Scale to a given range.\cr
+#' @template arg_exclude
 #' @param range [\code{numeric(2)}]\cr
 #'   Range for method \dQuote{range}.
 #'   Default is \code{c(0,1)}.
@@ -27,7 +28,7 @@
 #'   \dQuote{warn}: Same behaviour as \dQuote{quiet}, but print a warning message.\cr
 #'   \dQuote{stop}: Stop with an error.\cr
 #' @template ret_task
-#' @seealso \code{\link{BBmisc::normalize}}
+#' @seealso \code{\link[BBmisc]{normalize}}
 #' @export
 #' @family eda_and_preprocess
 normalizeFeatures = function(task, method = "standardize", exclude = character(0L), range = c(0, 1), on.constant = "quiet") {
