@@ -3,6 +3,7 @@ mlr_2.4:
   See TuneControl and FeatSelControl where it is documented what is done now.
 - showHyperPars was removed. getParamSet does exactly the same thing
 - option fix.factors in makeLearner was renamed to fix.factors.prediction for clarity
+- getTaskData now has recodeY = "drop.levels" which drops empty factor levels
 - new measures
 -- brier
 
